// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Component changes tabs 1`] = `
<div>
  <button
    key="0"
    onClick={[Function]}
  >
    tab1
  </button>
  <button
    key="1"
    onClick={[Function]}
  >
    tab2
  </button>
  <button
    key="2"
    onClick={[Function]}
  >
    tab3
  </button>
  <div
    className="content"
  >
    some random stufffff2
  </div>
</div>
`;

exports[`Tabs Component renders empty given no tabs 1`] = `<div />`;

exports[`Tabs Component renders the first tab by default 1`] = `
<div>
  <button
    key="0"
    onClick={[Function]}
  >
    tab1
  </button>
  <button
    key="1"
    onClick={[Function]}
  >
    tab2
  </button>
  <button
    key="2"
    onClick={[Function]}
  >
    tab3
  </button>
  <div
    className="content"
  >
    some random stufffff1
  </div>
</div>
`;
